--- a/gateway/package.json
+++ b/gateway/package.json
@@ -14,25 +14,27 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/gateway": "^2.0.5",
-    "@graphql-tools/utils": "^8.6.1",
-    "apollo-datasource": "^3.3.1",
-    "apollo-server": "^3.9.0",
-    "dotenv": "^16.0.0",
-    "graphql": "^16.5.0"
+    "@apollo/gateway": "^2.4.2",
+    "@apollo/server": "^4.7.0",
+    "@graphql-tools/utils": "^8.13.1",
+    "apollo-datasource": "^3.3.2",
+    "apollo-server": "^3.12.0",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.4.0",
-    "@graphql-codegen/typescript": "^2.4.2",
-    "@graphql-codegen/typescript-operations": "^2.2.2",
-    "@graphql-codegen/typescript-resolvers": "^2.4.3",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.13",
-    "jest": "^27.4.7",
-    "nodemon": "^2.0.15",
+    "@graphql-codegen/cli": "^2.16.5",
+    "@graphql-codegen/typescript": "^2.8.8",
+    "@graphql-codegen/typescript-operations": "^2.5.13",
+    "@graphql-codegen/typescript-resolvers": "^2.7.13",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.22",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "ts-jest": "^27.1.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
