--- a/gateway/package.json
+++ b/gateway/package.json
@@ -18,9 +18,14 @@
     "@apollo/server": "^4.7.0",
     "@graphql-tools/utils": "^8.13.1",
     "apollo-datasource": "^3.3.2",
-    "apollo-server": "^3.12.0",
+    "apollo-server": "^3.8.1",
+    "apollo-server-core": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
+    "method-override": "^3.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@graphql-codegen/typescript-operations": "^2.5.13",
     "@graphql-codegen/typescript-resolvers": "^2.7.13",
     "@types/jest": "^27.5.2",
+    "@types/method-override": "^0.0.32",
     "@types/node": "^17.0.45",
     "jest": "^27.5.1",
     "nodemon": "^2.0.22",
