--- a/gateway/package.json
+++ b/gateway/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/gateway": "^2.4.2",
+    "@apollo/query-planner": "^2.4.3",
     "@apollo/server": "^4.7.0",
     "@graphql-tools/utils": "^8.13.1",
     "apollo-datasource": "^3.3.2",
